# md-to-pptx

./: .gitignore  AGENTS.md  README.md  pyproject.toml
sample/: showcase.md  showcase.pptx  template-showcase.md  template-showcase.pptx  template.pptx
src/markdown_slides/: assets.py  cli.py  errors.py  markdown_body.py  models.py  parser.py  renderer.py
src/markdown_slides/assets/: color_schemes.json  example.pptx  syntax.json
tests/: test_cli.py  test_parser.py  test_renderer.py
