[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "markdown-pptx"
version = "1.0.2"
description = "Convert constrained Markdown slide decks into editable PowerPoint presentations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "John Paul Ellis" }]
keywords = ["markdown", "powerpoint", "pptx", "slides", "presentation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "httpx>=0.27",
  "markdown-it-py>=3.0",
  "PyYAML>=6.0",
  "python-pptx>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/pseudosavant/markdown-pptx"
Repository = "https://github.com/pseudosavant/markdown-pptx"
Issues = "https://github.com/pseudosavant/markdown-pptx/issues"
Releases = "https://github.com/pseudosavant/markdown-pptx/releases"

[project.scripts]
markdown-pptx = "markdown_slides.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_slides"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
]
